--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CRIOHO - Centro de Rehabilitación Integral</title>
     <link rel="icon" type="imge/x-icon" href="resources/img/Logo.png">
-    <link rel="stylesheet" href=".less/main.less" />
+    <link rel="stylesheet" href="less/main.less" />
   </head>
   <body>
     {{> header }}
